--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,4 @@ Age: <%= @user.age %>
 Email: <%= @user.email %>
 
 <%= link_to "Log Out",  signout_path %>
-<%= link_to "See attractions", attractions_path %>%
+<%= link_to "Textbooks", textbooks_path %>%
