--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= flash[:message] %>
+<h1> <%= flash[:message] %> </h1>
 <%= @user.admin ? "ADMIN": "" %>
 
 Name: <%= @user.first_name %> + <%= @user.last_name %>
