add admin text to show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1> <%= flash[:message] %> </h1>
 <%= @user.admin ? "ADMIN": "" %>
 
-Name: <%= @user.first_name %> + <%= @user.last_name %>
+Name: <%= @user.first_name %> <%= @user.last_name %>
 
 Username: <%= @user.user_name %>
 
