--- a/app/views/textbooks/new.html.erb
+++ b/app/views/textbooks/new.html.erb
@@ -1,8 +1,7 @@
-<%= form_for :attraction do |f| %>
-    Name <%= f.text_field :name %>
-    Height Requirement (in inches) <%= f.text_field :min_height %>
-    How fun is it? (1-5 scale) <%= f.text_field :nausea_rating %>
-    How nausea-inducing is it? (1-5 scale) <%= f.text_field :happiness_rating %>
-    How many tickets does it cost? <%= f.text_field :tickets %>
+<%= form_for :textbooks do |f| %>
+    Name: <%= f.text_field :title%>
+    Description: <%= f.text_area :description %>
+    Total Pages: <%= f.text_field :pages %>
+    Book Price: <%= f.text_field :cost %>
     <%= f.submit "Create Attraction" %>
 <% end %>
