add title,description,pages,and cost to edit form

--- a/app/views/textbooks/new.html.erb
+++ b/app/views/textbooks/new.html.erb
@@ -3,5 +3,5 @@
     Description: <%= f.text_area :description %>
     Total Pages: <%= f.text_field :pages %>
     Book Price: <%= f.text_field :cost %>
-    <%= f.submit "Create Attraction" %>
+    <%= f.submit "Create Book" %>
 <% end %>
