--- a/app/views/textbooks/edit.html.erb
+++ b/app/views/textbooks/edit.html.erb
@@ -1,7 +1,1 @@
-<%= form_for :attraction   do |f| %>
-    Name: <%= f.text_field :title%>
-    Description: <%= f.text_area :description %>
-    Total Pages: <%= f.text_field :pages %>
-    Book Price: <%= f.text_field :cost %>
-    <%= f.submit "Edit Book" %>
-<% end %>
+<% render 'form' %>
