--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,2 @@
 <h1> <%= flash[:message] %> </h1>
-<%= form_for @user do |f| %>
-    First Name: <%= f.text_field :first_name %>
-    Last Name: <%= f.text_field :last_name %>
-    Username: <%= f.text_field :user_name %>
-    Age: <%= f.text_field :age %>
-    Email: <%= f.text_field :email %>
-    Admin: <%= f.check_box :admin %>
-    Password: <%= f.password_field :password %>
-    <%= f.submit "Create User" %>
-<%end%>
+<% render 'form' %>
