--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,5 +9,6 @@ Age: <%= @user.age %>
 
 Email: <%= @user.email %>
 
+<%= link_to "Delete User",  signout_path %>
 <%= link_to "Log Out",  signout_path %>
 <%= link_to "Textbooks", textbooks_path %>%
