add delete_user_path and link to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,6 @@ Age: <%= @user.age %>
 
 Email: <%= @user.email %>
 
-<%= link_to "Delete User",  signout_path %>
+<%= link_to "Delete User",  delete_user_path %>
 <%= link_to "Log Out",  signout_path %>
 <%= link_to "Textbooks", textbooks_path %>%
