--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -1,16 +1,16 @@
 <h1>Attractions:</h1>
 <% if @user.admin %>
-    <%=link_to "New Attraction", new_attraction_path %>
+    <%=link_to "New Textbook", new_textbook_path %>
 <% end %>
 
 
 
-<% @attractions.each do |attraction| %>
-    Title: <%= attraction.name %>
+<% @textbooks.each do |textbook| %>
+    Title: <%= textbook.name %>
     <% if @user.admin %>
-        <%=link_to "Show #{attraction.name}", attraction_path(attraction) %>
+        <%=link_to "Show full contents of #{textbook.name}", textbook_path(textbook) %>
     <% else %>
-        <%= link_to "Go on #{attraction.name}", attraction_path(attraction) %>
+        <%= link_to "Change page of #{textbook.name}", textbook_path(textbook) %>
     <% end %>
 <% end%>
 
