--- a/app/views/textbooks/show.html.erb
+++ b/app/views/textbooks/show.html.erb
@@ -3,8 +3,9 @@
   <%= form_for(@current_page) do |f| %>
     <%= f.hidden_field :user_id %>
     <%= f.hidden_field :textbook_id %>
-    <%= f.hidden_field :textbook_id %>
-    <%= f.submit "Change Page" %>
+    <%= f.text_field :chapter_num %>
+    <%= f.text_field :page_num %>
+    <%= f.submit "Update Page" %>
   <%end%>
 
  <% if @user.admin %>
