--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,6 +1,1 @@
-<%= form_for @subject do |f| %>
-    Name: <%= f.text_field :name %>
-    <%= f.hidden_field :user_id %>
-    <%= f.hidden_field :textbook_id %>
-    <%= f.submit %>
-<% end %>
+<%= render 'form'%>
