--- a/app/views/textbooks/_form.html.erb
+++ b/app/views/textbooks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @textbook do |f| %>
+<%= form_for :textbook do |f| %>
     Name: <%= f.text_field :title%>
     Description: <%= f.text_area :description %>
     Total Pages: <%= f.text_field :pages %>
