Change textbook index page from current page to edit and add

--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -6,9 +6,9 @@
 <% @textbooks.each do |textbook| %>
     Title: <%= textbook.name %>
     <% if @user.admin %>
-        <%=link_to "Show full contents of #{textbook.name}", textbook_path(textbook) %>
+        <%=link_to "Edit #{textbook.name}", textbook_path(textbook) %>
     <% else %>
-        <%= link_to "Change page of #{textbook.name}", textbook_path(textbook) %>
+        <%= link_to "Add #{textbook.name}", textbook_path(textbook) %>
     <% end %>
 <% end%>
 
