--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -13,7 +13,7 @@
     <% if @user.admin %>
         <%=link_to "Edit #{textbook.name}", textbook_path(textbook) %>
     <% else %>
-        <%= link_to "Add #{textbook.name}", textbook_path(textbook) %>
+        <%=link_to "Add #{textbook.name}", new_textbook_path(textbook) %>
     <% end %>
 <% end%>
 
