--- a/app/views/textbooks/new.html.erb
+++ b/app/views/textbooks/new.html.erb
@@ -1,1 +1,9 @@
-<%= render 'form' %>
+<% if @user.admin %>
+    <%= render 'form' %>
+<% else %>
+    <h5> Add your textbook from the list </h5>
+    <%= form_for :textbook do |f| %>
+      <%= f.collection_select :id, Textbook.all, :id, :name %>
+    <%= f.submit %>
+    <% end %>
+<% end %>
