remove head forbidden from sessions and fix textbook show page to title instead of name

--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <% @textbooks.each do |textbook| %>
-    Title: <%= textbook.name %>
+    Title: <%= textbook.title %>
     <% if @user.admin %>
         <%=link_to "Edit #{textbook.name}", textbook_path(textbook) %>
     <% else %>
