change name to title in crud pages, fix session[id] to params[id]

--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -6,9 +6,9 @@
 <% @textbooks.each do |textbook| %>
     Title: <%= textbook.title %>
     <% if @user.admin %>
-        <%=link_to "Edit #{textbook.name}", textbook_path(textbook) %>
+        <%=link_to "Edit #{textbook.title}", textbook_path(textbook) %>
     <% else %>
-        <%= link_to "Add #{textbook.name}", textbook_path(textbook) %>
+        <%= link_to "Add #{textbook.title}", textbook_path(textbook) %>
     <% end %>
 <% end%>
 
