--- a/app/views/textbooks/new.html.erb
+++ b/app/views/textbooks/new.html.erb
@@ -3,7 +3,7 @@
 <% else %>
     <h5> Add your textbook from the list </h5>
     <%= form_for :textbook do |f| %>
-      <%= f.collection_select :id, Textbook.all, :id, :name %>
+      <%= f.collection_select :id, @textbooks, :id, :title %>
     <%= f.submit %>
     <% end %>
 <% end %>
