add user_subjects model, migration, and assocations to fix user subject many to many relationship

--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -7,13 +7,22 @@
         <%=link_to "Edit Subject", edit_subject_path(@subject) %>
   <% end %>
 
+<h1>Add new textbook</h1>
 
+<%= form_for :textbook do |f| %>
+    Name: <%= f.text_field :title%>
+    Description: <%= f.text_area :description %>
+    Total Pages: <%= f.text_field :pages %>
+    Book Price: <%= f.text_field :cost %>
+    <%= f.submit %>
+<% end %>
+
+
+Textbook List
 <% @subject.textbooks.each do |textbook| %>
     Title: <%= textbook.title %>
     <% if @user.admin %>
         <%=link_to "Edit #{textbook.title}", textbook_path(textbook) %>
-    <% else %>
-        <%=link_to "Add #{textbook.title}", new_textbook_path(textbook) %>
     <% end %>
 <% end%>
 
