--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,6 +1,8 @@
 <%= link_to "Sign Up",  new_user_path(@user)%>
-<%= link_to "Link to with Facebook" , '/auth/facebook' %>
+<%= link_to "Link to with Facebook" , '/auth/facebook/callback' %>
 <%= link_to "Sign In",  signin_path %>
+
+
 
 Toggle
 
