--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,7 +4,7 @@
     Username: <%= f.text_field :user_name %>
     Age: <%= f.text_field :age %>
     Email: <%= f.text_field :email %>
-    Admin: <%= f.check_box :admin %>
+    Admin: <%= f.hidden_field :admin %>
     Password: <%= f.password_field :password %>
     <%= f.submit %>
 <%end%>
