--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -1,10 +1,14 @@
 <h1>Textbooks:</h1>
 <%=link_to "New Textbook", subjects_path %>
 
-
+<ol>
 <% @textbooks.each do |textbook| %>
-    Title: <%= textbook.title %>
+    <br>
+    <li> Title: <%= textbook.title %>
     <%=link_to "Edit #{textbook.title}", textbook_path(textbook) %>
     <%= link_to "Add #{textbook.title}", textbook_path(textbook) %>
+    </li>
+    <br>
 <% end%>
+</ol>
 
