fix user show page, change textbook.names to title

--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -4,9 +4,7 @@
 <ol>
 <% @textbooks.each do |textbook| %>
     <br>
-    <li> Title: <%= textbook.title %>
-    <%=link_to "Edit #{textbook.title}", textbook_path(textbook) %>
-    <%= link_to "Add #{textbook.title}", textbook_path(textbook) %>
+    <li> Title: <%= link_to "#{textbook.title}", textbook_path(textbook) %>
     </li>
     <br>
 <% end%>
