--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,8 +20,8 @@ Email: <%= @user.email %>
     <%=link_to "Add #{subject.name}", new_subject_path(subject) %>
         <% subject.textbooks.each do |textbook| %>
         Title: <%= textbook.name %>
-        <%=link_to "Add #{textbook.name}", new_subject_path(subject) %>
-        <%=link_to "Edit #{textbook.name}", subject_path(subject) %>
+        <%=link_to "Add #{textbook.title}", new_subject_path(subject) %>
+        <%=link_to "Edit #{textbook.title}", subject_path(subject) %>
     <% end%>
 <% end%>
 
